views content and styling

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,192 @@
+@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@700&family=Ubuntu:wght@500&display=swap');
+
+/* home page */
+
+.home-page {
+  padding: 0 100px;
+}
+
+#home-welcome {
+  font-family: 'Edu VIC WA NT Beginner', cursive;
+  font-size: 70px;
+  margin: 0 0 60px -20px;
+}
+
+.home-content {
+  display: flex;
+  gap: 30px;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.home-content img {
+  max-height: 400px;
+  width: auto;
+}
+
+.home-content p {
+  font-size: 100px;
+}
+
+/* layout and header */
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  box-sizing: border-box;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+}
+
+li {
+  list-style-type: none;
 }
 
 a {
-  color: #00B7FF;
+  text-decoration: none;
+  color: black;
 }
+
+p {
+  margin: 0;
+}
+
+.navbar {
+  padding: 0 100px;
+  height: 120px;
+  margin-bottom: 30px;
+  font-family: 'Edu VIC WA NT Beginner', cursive;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(255, 150, 120);
+}
+
+.route-links a:hover {
+  transition: all 0.2s;
+  text-decoration: underline;
+}
+
+#home-link {
+  font-size: 50px;
+}
+
+.route-links {
+  display: flex;
+  width: 20%;
+  justify-content: space-between;
+  font-size: 25px;
+}
+
+.content {
+  box-sizing: border-box;
+  height: calc(100% - 150px);
+  width: 100%;
+  overflow: scroll;
+  padding: 0 100px 60px 100px;
+}
+
+
+/* List Page Layout */
+
+.brand-list-page, .shoes-list-page, .brand-detail-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 20px;
+}
+
+#create-brand-link, #create-shoes-link {
+  margin: 20px 0 10px 10px;
+  width: 200px;
+  font-size: 20px;
+  
+}
+
+#create-brand-link:hover, #create-shoes-link:hover {
+  transform: scale(1.1);
+  transition: all 0.2s;
+}
+
+.brand-grid-container, .all-shoes-container, .brand-shoes-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 50px 120px;
+}
+
+.brand-grid-item, .all-shoes-item, .brand-shoes-item {
+  box-sizing: border-box;
+  padding: 20px 0;
+  display: flex;
+  border-radius: 10px;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+}
+
+.brand-grid-item:hover, .all-shoes-item:hover, .brand-shoes-item:hover {
+  transition: all 0.2s;
+  background-color: lightgray;
+}
+
+.brand-img, .all-shoes-img, .brand-shoes-img {
+  max-width: 200px;
+  max-height: 150px;
+}
+
+.in-stock {
+  color: rgba(80, 220, 180);
+}
+
+.sold-out {
+  color: rgba(230, 100, 80);
+}
+
+/* Brand Page */
+
+.brand-grid-item {
+  justify-content: flex-end;
+}
+
+/* Shoe List Page */
+
+.all-shoes-item, .brand-shoes-item {
+  justify-content: space-between;
+}
+
+/* Item Detail */
+
+.detail-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 50px 50px;
+}
+
+.detail {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  font-size: 18px;
+}
+
+.detail h3 {
+  margin: 0;
+}
+
+.shoe-title {
+  font-size: 40px;
+}
+
+.shoe-brand-container, .shoe-price-container {
+  display: flex;
+  align-items: flex-end;
+  gap: 15px;
+  font-size: 20px;
+}
+
+.shoe-img {
+  max-height: 400px;
+  width: auto;
+}
+
