--- a/views/item_form.ejs
+++ b/views/item_form.ejs
@@ -35,6 +35,7 @@
         <label for="radio-no-stock">No</label>
         <label for="shoes-form-image">Shoe Image:</label>
         <input type="file" id="shoes-form-image" name="shoes-form-image">
+        <button type="submit" id="shoes-form-submit">Add !</button>
       </form>
     </div>
   </body>
