--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -148,6 +148,16 @@ p {
   justify-content: flex-end;
 }
 
+.brand-link-container {
+  display: flex;
+  gap: 30px;
+}
+
+.brand-link-container a:hover {
+  transition: all 0.2s;
+  transform: scale(1.1);
+}
+
 /* Shoe List Page */
 
 .all-shoes-item, .brand-shoes-item {
@@ -193,5 +203,91 @@ p {
 .shoe-link-container {
   display: flex;
   flex-direction: column;
+  gap: 20px;
+  margin: 30px 0 0 0;
 }
 
+.shoe-link-container a:hover {
+  transition: all 0.2s;
+  transform: scale(1.1);
+}
+
+/* Form */
+
+form {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+label {
+  margin-bottom: 15px;
+}
+
+input {
+  margin-bottom: 30px;
+  width: 200px;
+  height: 15px;
+}
+
+input[type="file"] {
+  display: none; 
+}
+
+form button {
+  font-family: inherit;
+  border: none;
+  background-color: inherit;
+  font-size: 16px;
+  padding: 0;
+}
+
+/* Category Form */
+
+.brand-form-image-label, .shoes-form-image-label {
+  cursor: pointer;
+  margin-bottom: 30px;
+}
+
+.update-button-container {
+  display: flex;
+  gap: 30px;
+}
+
+form button:hover, .update-button-container a:hover {
+  cursor: pointer;
+  transition: all 0.2s;
+  transform: scale(1.1);
+}
+
+/* Item Form */
+
+#shoes-form-brand {
+  margin-bottom: 30px;
+  width: 210px;
+  height: 22px;
+}
+
+.radio-container {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.radio-container label {
+  margin: 0;
+  padding: 0;
+}
+
+.radio-container input {
+  margin: 0;
+  padding: 0;
+  width: 30px;
+}
+
+.radio-yes-container, .radio-no-container {
+  display: flex;
+  align-items: center;
+}
