--- a/views/category_detail.ejs
+++ b/views/category_detail.ejs
@@ -10,11 +10,13 @@
       <h1 class="brand-title"><%= category.name %></h1>
       <div class="brand-link-container">
         <a id="update-brand" href="/<%= category.url %>/update">● Update Brand</a>
-        <a id="delete-brand" href="/<%= category.url %>/delete">− Delete Brand</a>
+        <% if (items.length == 0) { %>
+          <a id="delete-brand" href="/<%= category.url %>/delete">− Delete Brand</a>
+        <% } %>
       </div>
       <div class="brand-shoes-container">
         <% items.forEach(function(item) { %>
-          <a class="brand-shoes-item" href="../<%= item.url %>">
+          <a class="brand-shoes-item" href="/<%= item.url %>">
             <h3 class="brand-shoes-name"><%= item.name %></h3>
             <p class="brand-shoes-price">$<%= item.price %></p>
             <% if (item.stock) { %>
