--- a/views/category_form.ejs
+++ b/views/category_form.ejs
@@ -31,7 +31,7 @@
         <% if (update) { %>
           <div class="update-button-container">
             <button id="brand-form-submit" type="submit">Submit!</button>
-            <a id=brand-form-cancel href="/brand/<%= id %>">Go Back</a>  
+            <a id="brand-form-cancel" href="/brand/<%= id %>">Go Back</a>  
           </div>
         <% } else { %>
           <button id="brand-form-submit" type="submit">Add!</button>
