--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,7 @@
   <a href="/" id="home-link">Ball Shoes Locker</a>
   <ul class="route-links">
     <li>
-      <a href="/brands" id="all-brand-link">Brands</a>
+      <a href="/brand" id="all-brand-link">Brands</a>
     </li>
     <li>
       <a href="/shoes" id="all-item-link">All Shoes</a>
