--- a/views/category_form.ejs
+++ b/views/category_form.ejs
@@ -14,7 +14,7 @@
           New Brand Info:
         <% } %>
       </h1>
-      <form action="" method="POST" class="category-firm" enctype="multipart/form-data">
+      <form action="" method="POST" class="category-form" enctype="multipart/form-data">
         <label for="brand-form-name">Brand Name:</label>
         <input 
           type="text" 
