--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,5 +7,8 @@
     <li>
       <a href="/shoes" id="all-item-link">All Shoes</a>
     </li>
+    <li>
+      <a href="/email" id="email-link">Alert Email</a>
+    </li>
   </ul>
 </nav>
