--- a/views/category_detail.ejs
+++ b/views/category_detail.ejs
@@ -24,7 +24,7 @@
             <% } %>
             <img 
               class="brand-shoes-img" 
-              src="https:/<%= process.env.AWS_BUCKET %>.s3.us-east-1.amazonaws.com/<%= item.img %>"
+              src="https://<%= process.env.AWS_BUCKET %>.s3.us-east-1.amazonaws.com/<%= item.img %>"
               alt="<%= item.name %>"
             >
           </a>
