--- a/views/item_detail.ejs
+++ b/views/item_detail.ejs
@@ -44,7 +44,7 @@
         </div>
         <img 
           class="shoe-img" 
-          src="https:/<%= process.env.AWS_BUCKET %>.s3.us-east-1.amazonaws.com/<%= item.img %>"
+          src="https://<%= process.env.AWS_BUCKET %>.s3.us-east-1.amazonaws.com/<%= item.img %>"
           alt="<%= item.name %>"
         >
       </div>
